1) Added gitignore file. 2) Fixed error from missing path file in asr_arxiv.tex lines 59 and 60.

--- a/document/arxiv/asr_arxiv.tex
+++ b/document/arxiv/asr_arxiv.tex
@@ -56,6 +56,8 @@
 \restylefloat{table}
 \setcounter{secnumdepth}{3}
 
+\newcommand{\pathToSourceFiles}{../source}
+\newcommand{\pathToOtherFiles}{../other}
 
 \begin{document} 
 
