--- a/document/source/abstract.tex
+++ b/document/source/abstract.tex
@@ -6,6 +6,6 @@ Transformation of UKHC rules into assertions can be achieved either by direct tr
 %
 The approach is illustrated on the example of assertion checking for vehicle overtaking, using a geospatial information system in an SQL database for validation and performance assessment.
 %
-We present initial simulation and realtime video analysis experiments that apply assertions relevant in a vehicle overtaking scenario together with a brief analysis of the safety and mission performance characteristics measured.
+We present initial simulation and realtime video analysis experiments that apply assertions relevant in this overtaking scenario together with an analysis of the safety and mission performance characteristics measured.
 %
-\todo[inline]{Highlight conclusions/contributions?}
+%\todo[inline]{Highlight conclusions/contributions?}
