diving -> driving, CAV Forth reference reminder and last author swap

--- a/document/ieee_trans/asr_ieeetrans.tex
+++ b/document/ieee_trans/asr_ieeetrans.tex
@@ -42,7 +42,7 @@
 % ***************************************************
 \title{Safety Validation of Autonomous Vehicles using Assertion-based Oracles}
 
-\author{Chris Harper, Greg Chance, Abanoub Ghobrial, Saquib Alam, Kerstin Eder, Tony Pipe 
+\author{Chris Harper, Greg Chance, Abanoub Ghobrial, Saquib Alam, Tony Pipe, Kerstin Eder
 \thanks{{\footnotesize
 Manuscript  
 received ...;
@@ -51,7 +51,7 @@ accepted....
 Date of publication ...;
 date of current version ....
 
-This research has in part been funded by the ROBOPILOT and CAPRI projects. Both projects are part-funded by the Centre for Connected and Autonomous Vehicles (CCAV), delivered in partnership with Innovate UK under grant numbers 103703 (CAPRI) and 103288 (ROBOPILOT). This research was also supported in part by the UKRI Trustworthy Autonomous Systems Node in Functionality under grant number EP/V026518/1. Also special thanks to S\'everin Lemaignan.
+This research has in part been funded by the CAV Forth, ROBOPILOT and CAPRI projects. These projects are part-funded by the Centre for Connected and Autonomous Vehicles (CCAV), delivered in partnership with Innovate UK under grant numbers\todo{add CAV Forth grand number} 103703 (CAPRI) and 103288 (ROBOPILOT). This research was also supported in part by the UKRI Trustworthy Autonomous Systems Node in Functionality under grant number EP/V026518/1. Also special thanks to S\'everin Lemaignan.
 
 % The Associate Editor for this paper was ....
 
